# Logix

./: .gitignore  CMakeLists.txt  README.md
Test/: BuilderTest.cpp  FormatterTest.cpp  GlobalTest.cpp  LogTest.cpp  LoggerTest.cpp  PerformanceTest.cpp  SinkTest.cpp  TestMacro.hpp
include/logix/: Formatter.hpp  Logix.hpp  Message.hpp
include/logix/builder/: GlobalLoggerBuilder.hpp  LocalLoggerBuilder.hpp  LoggerBuilder.hpp
include/logix/fmt/: FileFormatItem.hpp  FormatItem.hpp  LevelFormatItem.hpp  LineFormatItem.hpp  LoggerFormatItem.hpp  MsgFormatItem.hpp  NLineFormatItem.hpp  OtherFormatItem.hpp  TabFormatItem.hpp  ThreadFormatItem.hpp  TimeFormatItem.hpp
include/logix/logger/: AsyncLogger.hpp  Logger.hpp  SyncLogger.hpp
include/logix/manager/: LogManager.hpp
include/logix/sink/: FileSink.hpp  LogSink.hpp  RollBySizeSink.hpp  SinkFactory.hpp  StdOutSink.hpp
include/logix/tools/: AsyncLopper.hpp  Buffer.hpp  Formatter.hpp  Level.hpp  Message.hpp
include/logix/utils/: Date.hpp  File.hpp
