CMAKE_MINIMUM_REQUIRED(VERSION 3.20)
SET(CMAKE_C_STANDARD 11)
SET(CMAKE_CXX_STANDARD 17)
PROJECT(Logix)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/include)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/Test)

# Tests
ADD_EXECUTABLE(FormatterTest ${CMAKE_CURRENT_SOURCE_DIR}/Test/FormatterTest.cpp)
ADD_EXECUTABLE(SinkTest ${CMAKE_CURRENT_SOURCE_DIR}/Test/SinkTest.cpp)
ADD_EXECUTABLE(LoggerTest ${CMAKE_CURRENT_SOURCE_DIR}/Test/LoggerTest.cpp)
