CMAKE_MINIMUM_REQUIRED(VERSION 3.20)
SET(CMAKE_C_STANDARD 11)
SET(CMAKE_CXX_STANDARD 17)
PROJECT(Logix)

SET(ENABLE_TEST OFF CACHE BOOL "Enable test")

ADD_LIBRARY(LogixLib INTERFACE)
TARGET_INCLUDE_DIRECTORIES(LogixLib INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/include)

IF(ENABLE_TEST)
    INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/Test)
    # Tests
    ADD_EXECUTABLE(FormatterTest ${CMAKE_CURRENT_SOURCE_DIR}/Test/FormatterTest.cpp)
    ADD_EXECUTABLE(SinkTest ${CMAKE_CURRENT_SOURCE_DIR}/Test/SinkTest.cpp)
    ADD_EXECUTABLE(LoggerTest ${CMAKE_CURRENT_SOURCE_DIR}/Test/LoggerTest.cpp)
    ADD_EXECUTABLE(BuilderTest ${CMAKE_CURRENT_SOURCE_DIR}/Test/BuilderTest.cpp)
    ADD_EXECUTABLE(LogTest ${CMAKE_CURRENT_SOURCE_DIR}/Test/LogTest.cpp)
    ADD_EXECUTABLE(GlobalTest ${CMAKE_CURRENT_SOURCE_DIR}/Test/GlobalTest.cpp)
    ADD_EXECUTABLE(PerformanceTest ${CMAKE_CURRENT_SOURCE_DIR}/Test/PerformanceTest.cpp)
ENDIF()
